# DeepCut

./: .gitignore  .windsurfrules  ARCHITECTURE.md  SPEC.md  TASKS.md
.windsurf/workflows/: optimize-perf.md  review-ui.md
engine/: .env.example  README.md  pyproject.toml
engine/api/: __init__.py  job_store.py  main.py  models.py
engine/deepcut/: __init__.py  cli.py  config.py  exceptions.py
engine/deepcut/ai/: llm_client.py  tag_generator.py  topic_segmenter.py
engine/deepcut/ai/prompts/: tag_generation.txt  topic_segmentation.txt
engine/deepcut/analyzers/: motion_detector.py  scene_detector.py  transcriber.py  vad_detector.py
engine/deepcut/fusion/: engine.py  strategy.py
engine/deepcut/models/: analysis.py  clip.py  video.py
engine/deepcut/pipeline/: orchestrator.py
engine/deepcut/utils/: logging.py  version.py
engine/deepcut/video/: cutter.py  extract.py  probe.py  utils.py
engine/tests/: conftest.py  test_ai.py  test_analyzers.py  test_config.py  test_cutter.py  test_fusion.py  test_models.py  test_version.py  test_video_probe.py  test_video_utils.py
web/: .env.example  NETWORK_ACCESS.md  SERVER_ACTION_AUDIT.md  TEST_PLAN.md  TEST_RESULTS.md  package-lock.json  package.json  playwright.config.ts
web/e2e/: 01-homepage-navigation.spec.ts  02-upload-local-path.spec.ts  03-project-list.spec.ts  04-global-search.spec.ts  05-settings-watch-dir.spec.ts  06-accessibility.spec.ts
web/playwright-report/: index.html
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx  page.tsx
web/worker/: process.ts  watch.ts
(+26 files in other folders)
