[project]
name = "deepcut"
version = "0.1.0"
description = "DeepCut - 智能短视频切片引擎"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.12,<1.0",
    "loguru>=0.7,<1.0",
    "openai>=1.0,<2.0",
    "scenedetect[opencv]>=0.6,<1.0",
    "opencv-python-headless>=4.8,<5.0",
    "faster-whisper>=1.0,<2.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24,<2.0",
    "python-dotenv>=1.0,<2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "python-multipart>=0.0.7,<1.0",
]

[project.scripts]
deepcut = "deepcut.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.3,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
